--- a/ui/src/app/views/concept-homepage/component.html
+++ b/ui/src/app/views/concept-homepage/component.html
@@ -32,19 +32,16 @@
         </div>
         <div class="concept-text">
           <div>
-            <span class="concept-count-text" *ngIf="!standardConceptsOnly else standardCount">{{domain.allConceptCount}}</span>
-            <ng-template #standardCount>
-              <span class="concept-count-text">{{domain.standardConceptCount}} </span>
-            </ng-template>
+            <span class="concept-count-text">{{standardConceptsOnly ? (domain.standardConceptCount | number: '1.0-0') : (domain.allConceptCount | number: '1.0-0')}}</span>
             <span class="concept-label-text">concepts</span>
           </div>
           in this domain.
           <div style="margin-top: 0.5rem">
-            <span class="participant-count-text">{{domain.participantCount}}</span>
+            <span class="participant-count-text">{{domain.participantCount | number: '1.0-0'}}</span>
             participants in this domain.
           </div>
         </div>
-        <div class="footer"><button class="btn btn-link browse-btn" [disabled]="true" (click)="browseDomain(domain)">Browse Domain</button></div>
+        <div class="footer"><button class="btn btn-link browse-btn" (click)="browseDomain(domain)">Browse Domain</button></div>
       </div>
     </ng-template>
   </div>
@@ -56,22 +53,23 @@
             <div class="chart-selector-header">
               {{domain.name}}
             </div>
+            <!-- TODO: Make this the counts returned from search. -->
             <div>{{domain.allConceptCount}}</div>
           </button>
         </div>
       </div>
-      <div class="filter-options">
-        Filter by vocabulary:
-        <clr-checkbox class="filter-checkbox" [clrChecked]="standardConceptsOnly">
-          SNOMED (4011)
-        </clr-checkbox>
-        <clr-checkbox class="filter-checkbox" [clrChecked]="standardConceptsOnly">
-          CPT (2951)
-        </clr-checkbox>
-        <clr-checkbox class="filter-checkbox" [clrChecked]="standardConceptsOnly">
-          ICD10 (2112)
-        </clr-checkbox>
-      </div>
+      <!--<div class="filter-options">-->
+        <!--Filter by vocabulary:-->
+        <!--<clr-checkbox class="filter-checkbox" [clrChecked]="standardConceptsOnly">-->
+          <!--SNOMED (4011)-->
+        <!--</clr-checkbox>-->
+        <!--<clr-checkbox class="filter-checkbox" [clrChecked]="standardConceptsOnly">-->
+          <!--CPT (2951)-->
+        <!--</clr-checkbox>-->
+        <!--<clr-checkbox class="filter-checkbox" [clrChecked]="standardConceptsOnly">-->
+          <!--ICD10 (2112)-->
+        <!--</clr-checkbox>-->
+      <!--</div>-->
       <app-concept-table [concepts]="concepts" [selectedDomain]="selectedDomain" [loading]="searchLoading"></app-concept-table>
       <div (mouseenter)="addTextHovering=true" (mouseleave)="addTextHovering=false" (click)="openAddModal()" class="add-section">
         <div class="add-text" [class.hovering]="addTextHovering">Add to set</div>
