--- a/ui/src/app/views/resource-card/component.html
+++ b/ui/src/app/views/resource-card/component.html
@@ -26,10 +26,10 @@
     {{resourceCard.cohort?.description}}
   </div>
   <div class="footer">
-    <div class="last-modified">Last Updated <br/>{{resourceCard.modifiedTime | date}}</div>
+    <div class="last-modified">Last Modified: {{resourceCard.modifiedTime | date}}</div>
     <div class="item-type {{resourceType}}">
-      <div id="cohort-decoration" *ngIf="resourceCard.cohort">CH</div>
-      <div id="notebook-decoration" *ngIf="resourceCard.notebook">NB</div>
+      <div id="cohort-decoration" *ngIf="resourceCard.cohort">Cohort</div>
+      <div id="notebook-decoration" *ngIf="resourceCard.notebook">Notebook</div>
     </div>
   </div>
 </div>
