--- a/ui/src/app/views/concept-homepage/component.html
+++ b/ui/src/app/views/concept-homepage/component.html
@@ -53,7 +53,7 @@
             <div class="chart-selector-header">
               {{domain.name}}
             </div>
-            <!-- TODO: Make this the counts returned from search. -->
+            <!-- TODO (RW-1277): Make this the counts returned from search. -->
             <div>{{domain.allConceptCount}}</div>
           </button>
         </div>
