Updated size of input because it was not being clicked on to trigger cursor.

--- a/ui/src/styles.css
+++ b/ui/src/styles.css
@@ -470,3 +470,12 @@ body .p-menu .p-menuitem-link {
   display: flex;
   align-items: center;
 }
+
+.css-b8ldur-Input {
+  width: 100%;
+  z-index: 1;
+}
+
+.css-b8ldur-Input :is(div,input){
+  width: 100%;
+}
