--- a/ui/src/styles.css
+++ b/ui/src/styles.css
@@ -471,11 +471,12 @@ body .p-menu .p-menuitem-link {
   align-items: center;
 }
 
+/* React Select styling to increase size of underlying input tag*/
 .css-b8ldur-Input {
   width: 100%;
   z-index: 1;
 }
 
-.css-b8ldur-Input :is(div,input){
+.css-b8ldur-Input :is(div,input) {
   width: 100%;
 }
