[RW-9464][risk=no] Updated size of input to properly trigger cursor (#7375)

--- a/ui/src/styles.css
+++ b/ui/src/styles.css
@@ -470,3 +470,13 @@ body .p-menu .p-menuitem-link {
   display: flex;
   align-items: center;
 }
+
+/* React Select styling to increase size of underlying input tag */
+.css-b8ldur-Input {
+  width: 100%;
+  z-index: 1;
+}
+
+.css-b8ldur-Input :is(div, input) {
+  width: 100%;
+}
