Updated template to properly throw error codes.

--- a/ui/src/assets/generation/runtime.mustache
+++ b/ui/src/assets/generation/runtime.mustache
@@ -122,7 +122,11 @@ export class BaseAPI {
 
     protected async request(context: RequestOpts, initOverrides?: RequestInit | InitOverrideFunction): Promise<Response> {
         const { url, init } = await this.createFetchParams(context, initOverrides);
-        return await this.fetchApi(url, init);
+        const response = await this.fetchApi(url, init);
+        if (response && (response.status >= 200 && response.status < 300)) {
+            return response;
+        }
+        throw response;
     }
 
     private async createFetchParams(context: RequestOpts, initOverrides?: RequestInit | InitOverrideFunction) {
